--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,16 @@ sha2 = "0.10"
 rand = "0.8.5"
 hex = "0.4"
 chrono = "0.4"
+
+[dev-dependencies]
+assert_cmd = "2.0.17"
+tempfile = "3.19.1"
+predicates = "3.1.3"
+tempdir = "0.3.7"
+
+[[bin]]
+name = "arc"
+path = "src/main.rs"
+
+[lib]
+path = "src/lib.rs"
